lib/src/extraction/snapshots/gql_safeguard_lib__extraction__registry__tests__registry_from_invalid_fixtures.snap
---
source: lib/src/extraction/registry.rs
expression: formatted
---
GraphQL Registry
├── Queries (3)
|   ├── GetFullUserUnprotected (fixtures/invalid/unprotected_nested.ts)
|   |   ├── Fields:
|   |   |   └── user
|   |   └── Fragment Spreads:
|   |       └── UserDetailsUnprotected
|   ├── GetUserProfileUnprotected (fixtures/invalid/missing_catch.tsx)
|   |   └── Fields:
|   |       └── user
|   └── MixedQuery (fixtures/invalid/partial_protection.ts)
|       ├── Fields:
|       |   └── user
|       └── Fragment Spreads:
|           ├── ProtectedFragment
|           └── UnprotectedFragment
└── Fragments (5)
    ├── ProtectedFragment (fixtures/invalid/partial_protection.ts)
    |   ├── Directives:
    |   |   └── Catch 🧤
    |   └── Fields:
    |       ├── sensitiveData [ThrowOnFieldError ⚠️]
    |       └── otherData
    ├── UnprotectedFragment (fixtures/invalid/partial_protection.ts)
    |   └── Fields:
    |       ├── riskyField [ThrowOnFieldError ⚠️]
    |       └── normalField
    ├── UserAvatarUnprotected (fixtures/invalid/unprotected_nested.ts)
    |   ├── Directives:
    |   |   └── ThrowOnFieldError ⚠️
    |   └── Fields:
    |       ├── avatar
    |       └── avatarUrl
    ├── UserBasicInfoUnprotected (fixtures/invalid/unprotected_nested.ts)
    |   └── Fields:
    |       ├── id
    |       ├── name
    |       └── email
    └── UserDetailsUnprotected (fixtures/invalid/unprotected_nested.ts)
        ├── Fields:
        |   └── bio
        └── Fragment Spreads:
            ├── UserBasicInfoUnprotected
            └── UserAvatarUnprotected
