lib/src/extraction/snapshots/gql_safeguard_lib__extraction__registry__tests__registry_from_valid_fixtures.snap
---
source: lib/src/extraction/registry.rs
expression: formatted
---
GraphQL Registry
├── Queries (3)
|   ├── GetFullUser (fixtures/valid/nested_fragments_protected.ts)
|   |   ├── Fields:
|   |   |   └── user
|   |   └── Fragment Spreads:
|   |       └── UserDetails
|   ├── GetUserProfile (fixtures/valid/query_with_catch.tsx)
|   |   ├── Directives:
|   |   |   └── Catch 🧤
|   |   └── Fields:
|   |       └── user
|   └── GetUserWithRiskyData (fixtures/valid/fragment_level_catch.ts)
|       ├── Directives:
|       |   └── Catch 🧤
|       ├── Fields:
|       |   └── user
|       └── Fragment Spreads:
|           └── RiskyUserData
└── Fragments (6)
    ├── RiskyUserData (fixtures/valid/fragment_level_catch.ts)
    |   ├── Directives:
    |   |   └── Catch 🧤
    |   └── Fields:
    |       ├── sensitiveInfo [ThrowOnFieldError ⚠️]
    |       ├── backupEmail [ThrowOnFieldError ⚠️]
    |       └── internalId
    ├── UserAvatar (fixtures/valid/nested_fragments_protected.ts)
    |   ├── Directives:
    |   |   └── Catch 🧤
    |   ├── Fields:
    |   |   └── avatar
    |   └── Fragment Spreads:
    |       └── avatarImage
    ├── UserBasicInfo (fixtures/valid/nested_fragments_protected.ts)
    |   └── Fields:
    |       ├── id
    |       ├── name
    |       └── email
    ├── UserBio (fixtures/valid/nested_fragments_protected.ts)
    |   └── Fields:
    |       ├── bioText
    |       └── bioImage [ThrowOnFieldError ⚠️]
    ├── UserDetails (fixtures/valid/nested_fragments_protected.ts)
    |   ├── Fields:
    |   |   └── bio [Catch 🧤]
    |   └── Fragment Spreads:
    |       ├── UserBasicInfo
    |       ├── UserAvatar
    |       └── UserBio
    └── avatarImage (fixtures/valid/nested_fragments_protected.ts)
        ├── Directives:
        |   └── ThrowOnFieldError ⚠️
        └── Fields:
            ├── avatar
            └── avatarUrl
